# dataclass

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
openinflation_dataclass/: card.py  geolocation.py  tree.py
src/openinflation_dataclass/: __init__.py  card.py  geolocation.py  serialization.py  tree.py  types.py
tests/: test_models.py
