[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "openinflation-dataclass"
dynamic = ["version"]
description = "Pydantic models for retail products, category trees, and geolocation entities."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "OpenInflation Contributors" }]
keywords = ["pydantic", "models", "serialization", "retail", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10,<3.0",
]

[project.urls]
Homepage = "https://github.com/Open-Inflation/dataclass"
Repository = "https://github.com/Open-Inflation/dataclass"
Issues = "https://github.com/Open-Inflation/dataclass/issues"
Changelog = "https://github.com/Open-Inflation/dataclass/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "build>=1.2.2",
    "mypy>=1.15",
    "pytest>=8.3",
    "ruff>=0.9",
    "twine>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/openinflation_dataclass"]

[tool.hatch.version]
path = "src/openinflation_dataclass/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/CHANGELOG.md",
    "/src/openinflation_dataclass",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]

[tool.mypy]
python_version = "3.10"
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
